# chunin-poc

./: pyproject.toml
chunin_poc/: __main__.py  cli.py
chunin_poc/abstract/: __init__.py  configurator.py  executor.py  result_manager.py  runner.py
chunin_poc/common/: config.py  types.py  utils.py
chunin_poc/common/profiles/: __init__.py  google.py
chunin_poc/tools/: __init__.py
chunin_poc/tools/bandit/: configuratot.py  executor.py  result_manager.py  runner.py
chunin_poc/tools/flake8/: configurator.py  executor.py  result_manager.py  runner.py
chunin_poc/tools/mypy/: configurator.py  executor.py  result_manager.py  runner.py
